examples/test/testpolicy17873.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17873
  namespace: namespace107
spec:
  podSelector:
    matchLabels:
      key3: value24
      key40: value23
      key47: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value14
      podSelector:
        matchLabels:
          key33: value12
          key28: value5
